# pulsars

./: .gitignore  Cargo.toml  LICENSE  README.md  runpulsar.sh
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/real/: dsv4.rs  qwen35.rs
crates/gguf/src/: lib.rs
crates/kernels/: build.rs
crates/kernels/cuda/: gqa_kernels.inc  iq_extra_tables.inc  mla_kernels.inc  pulsar_kernels.cu  qwen35_kernels.inc
crates/kernels/src/: lib.rs
crates/kernels/tests/: selftests.rs
crates/quant/src/: cpu_dot.rs  cpu_dot_tables.rs  iq.rs
crates/serve/src/: main.rs
crates/serve/webui/: index.html
crates/stream/src/: lib.rs
crates/tokenizer/src/: lib.rs
docs/: deepseek4-port-notes.md  dflash-port-notes.md
docs/assets/: pulsar-poster.html
docs/examples/: runpulsar.md  runpulsar.sh
scripts/: check.sh
