[package]
name = "engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "hy-v3 forward graph and decode loop over the pulsar CUDA kernels."

[dependencies]
gguf = { path = "../gguf" }
kernels = { path = "../kernels" }
tokenizer = { path = "../tokenizer" }

[[bin]]
name = "pulsar-cli"
path = "src/bin/pulsar-cli.rs"
